--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 18px;
   line-height: 34px;
   color: #777777;
-  background: url("../images/concrete_seamless.png");
+  background: url("concrete_seamless.png");
 }
 
 * {
@@ -12,6 +12,9 @@ body {
 
 /* general */
 
+#navbar{
+background: ffffff
+}
 .container {
   width: 100%;
   max-width: 960px;
